Hls/BlackFilter/solution1/csim/report/black_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../test.cpp in debug mode
csim.mk:77: recipe for target 'obj/test.o' failed
In file included from C:/Xilinx/Vivado/2018.2/include/floating_point_v7_0_bitacc_cmodel.h:143:0,
                 from C:/Xilinx/Vivado/2018.2/include/hls_fpo.h:166,
                 from C:/Xilinx/Vivado/2018.2/include/hls_half.h:58,
                 from C:/Xilinx/Vivado/2018.2/include/ap_int_sim.h:73,
                 from C:/Xilinx/Vivado/2018.2/include/ap_int.h:65,
                 from C:/Xilinx/Vivado/2018.2/include/ap_axi_sdata.h:86,
                 from C:/Xilinx/Vivado/2018.2/include/hls/hls_axi_io.h:39,
                 from C:/Xilinx/Vivado/2018.2/include/hls_video.h:48,
                 from ../../../main.h:1,
                 from ../../../test.cpp:2:
C:/Xilinx/Vivado/2018.2/include/gmp.h:62:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from C:/Xilinx/Vivado/2018.2/include/hls_fpo.h:166:0,
                 from C:/Xilinx/Vivado/2018.2/include/hls_half.h:58,
                 from C:/Xilinx/Vivado/2018.2/include/ap_int_sim.h:73,
                 from C:/Xilinx/Vivado/2018.2/include/ap_int.h:65,
                 from C:/Xilinx/Vivado/2018.2/include/ap_axi_sdata.h:86,
                 from C:/Xilinx/Vivado/2018.2/include/hls/hls_axi_io.h:39,
                 from C:/Xilinx/Vivado/2018.2/include/hls_video.h:48,
                 from ../../../main.h:1,
                 from ../../../test.cpp:2:
C:/Xilinx/Vivado/2018.2/include/floating_point_v7_0_bitacc_cmodel.h:135:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
../../../test.cpp: In function 'int main(int, char**)':
../../../test.cpp:6:1: error: 'IplImage' was not declared in this scope
 IplImage* src;
 ^~~~~~~~
../../../test.cpp:6:11: error: 'src' was not declared in this scope
 IplImage* src;
           ^~~
../../../test.cpp:7:11: error: 'dst' was not declared in this scope
 IplImage* dst;
           ^~~
../../../test.cpp:9:29: error: 'cvLoadImage' was not declared in this scope
 src = cvLoadImage("test.bmp");
                             ^
../../../test.cpp:10:34: error: 'cvGetSize' was not declared in this scope
 dst = cvCreateImage(cvGetSize(src), src->depth, src->nChannels);
                                  ^
../../../test.cpp:10:63: error: 'cvCreateImage' was not declared in this scope
 dst = cvCreateImage(cvGetSize(src), src->depth, src->nChannels);
                                                               ^
../../../test.cpp:11:31: error: 'IplImage2AXIvideo' was not declared in this scope
 IplImage2AXIvideo(src, src_axi);
                               ^
../../../test.cpp:13:31: error: 'AXIvideo2IplImage' was not declared in this scope
 AXIvideo2IplImage(dst_axi, dst);
                               ^
../../../test.cpp:14:26: error: 'cvSaveImage' was not declared in this scope
 cvSaveImage("op.bmp", dst);
                          ^
../../../test.cpp:15:20: error: 'cvReleaseImage' was not declared in this scope
 cvReleaseImage(&src);
                    ^
make: *** [obj/test.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
